--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-:root{
-    --salmon:#ff8873;                
+
+:root {
+    --salmon: #ff8873;
     --black: #000000;
     --white: #ffffff;
-    --blue:#0000ff;
-    --darkblue:#00009e;
+    --blue: #0000ff;
+    --darkblue: #00009e;
 }
-.light-theme{
+
+.light-theme {
     --FontColor: #f8f8f8;
     --bg: #ff8873;
     --BtnFontColor: #000000;
@@ -18,182 +20,231 @@
     --Foot: #000000;
 }
 
- .dark-theme{
+.dark-theme {
     --FontColor: #000000;
     --bg: #000000;
     --BtnFontColor: #000000;
     --BtnBg: #ff8873;
     --Foot: #ffffff;
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-body{
-    background-color: var(--bg);
 }
-nav{
-    padding-block: 1%;
-    padding-inline: 5%;
-    font-size: 170%;
+
+/* ESTILO GERAL */
+body {
+    background-color: var(--bg);
+    font-family: sans-serif;
+}
+
+/* NAV */
+nav {
+    padding: 1% 5%;
+    font-size: 1.7vw;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     background-color: var(--BtnBg);
+    gap: 1rem;
 }
-.itemNav{
-    display: flex;
+
+.itemNav {
     color: #ffffff;
-    margin-inline: 1%;
-    cursor: copy;
     background-color: #000000;
     border-radius: 20%;
-    padding: 1vh;
-    padding-inline: 2vh;
+    padding: 1vh 2vh;
+    text-align: center;
 }
-.itemNav:hover{
+
+.itemNav:hover {
     background-color: #0000ff;
-    padding: 0.5%;
     border-radius: 30px;
-    transform: tranlateX(1vh) rotate(10deg);
-    transition-duration: 1s;
+    transition: 1s;
+    transform: translateX(1vh) rotate(5deg);
 }
-a{
+
+a {
     color: white;
     text-decoration: none;
 }
 
-
-
-
-
-.BtnTema{
+.BtnTema {
     position: absolute;
     left: 2vh;
     font-size: 70%;
     color: #ffffff;
+    background-color: #000043;
     border-top-right-radius: 40%;
     border-bottom-left-radius: 40%;
-    background-color: #000043;
     cursor: pointer;
     padding: 0.5%;
 }
 
-.BtnTema:hover{
-    transition-duration: 1s;
+.BtnTema:hover {
+    transition: 1s;
     background-color: #0000e4;
 }
-#lineT1{
-    display: inline;
-}
-h2{
-    color: var(--Foot);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 300%;
+
+/* CONTEÚDO PRINCIPAL */
+#lineT1 {
+    display: block;
+    text-align: center;
     margin-top: 4vh;
 }
-#imgFOTO{
-    cursor: crosshair;
-    border-radius: 30%;
-    border-style: solid;
-    border-width: 20%;
-    color: #ffffff;
-}
-img{
-    cursor: cell;
-    position: absolute;
-    right: 10vh;
-    height: 40vh;
-    width: 40vh;
-}
-main{
-    flex-direction:column;
-}
-main h3{
-    margin-left: 10vh;
-    font-size: 4vh;
-}
-.IMGlink{
-    cursor: cell;
-    position: absolute;
-    left: 10vh;
-    height: 10vh;
-    width: 10vh;
-}
-#L1{
-    cursor:cell;
-}
-#L2{
-    border-radius: 30%;
-    left: 24vh;
-}
-#L3{
-    margin-top: 5%;
-}
-#L4{
-    border-radius: 30%;
-    margin-top: 5%;
-    margin-left: 6.5%;
-}
-#L5{
-    margin-top: 10%;
-}
-#L6{
-    border-radius: 25%;
-    margin-top: 10%;
-    margin-left: 6.5%;
-}
-#L7{
-    border-radius: 25%;
-    margin-top: 15%;
-    margin-left: 3%;
+
+h2 {
+    color: var(--Foot);
+    font-size: 3vw;
 }
 
-footer{
-    color: var(--FontColor);
-    padding: 1%;
-    position: absolute;
-    bottom: 0;
-    background-color: var(--BtnBg);
-    inline-size: 100%;
+#imgFOTO {
+    margin-top: 2vh;
+    width: 25vw;
+    max-width: 200px;
+    border-radius: 30%;
+    border: 5px solid white;
+    cursor: pointer;
 }
-footer u button a{
-    color: var(--FontColor);
-    background-color: var(--BtnBg);
+
+/* MAIN LINKS */
+main {
+    margin-top: 5vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2vh;
 }
-u a{
-    color: #000000;
+
+main h3 {
+    width: 100%;
+    text-align: center;
+    font-size: 2rem;
 }
-#IMGPrincipal{
-    position: absolute;
-    bottom: 10%;
-    height: 7%;
-    width: 6%;
+
+.IMGlink {
+    height: 10vh;
+    width: 10vh;
+    max-width: 80px;
+    object-fit: contain;
 }
-#lgGoogle{
-    cursor: help;
-    position: absolute;
-    height: 25%;
-    width: 25%;
-    left: 38%;
+
+/* LINKS INDIVIDUAIS */
+#L2, #L4, #L6, #L7 {
+    border-radius: 30%;
+}
+#L3, #L5 {
+    margin-top: 1vh;
+}
+#L6, #L7 {
+    margin-left: 1vh;
+}
+
+/* GOOGLE LINKS */
+#GoogleIMGs {
+    position: relative;
+    margin-top: 10vh;
+    text-align: center;
+}
+
+#IMGPrincipal {
+    height: 5vh;
+    width: 5vh;
+    position: relative;
+}
+
+#lgGoogle, #lgGoogle-1 {
+    margin: 2vh auto;
+    width: 25vw;
+    max-width: 200px;
     border-radius: 10%;
 }
-#lgGoogle-1{
-    position: absolute;
-    height: 30%;
-    width: 30%;
-    left: 35%;
-    margin-top: 7%;
+
+#lgGoogle-1 {
+    width: 30vw;
+    max-width: 220px;
 }
+
+/* FOOTER */
+footer {
+    color: var(--FontColor);
+    background-color: var(--BtnBg);
+    padding: 1vh;
+    text-align: center;
+    margin-top: 10vh;
+}
+
+footer button {
+    background: none;
+    border: none;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+footer a {
+    color: var(--FontColor);
+}
+
+/* MEDIA QUERIES - Responsividade */
+@media (max-width: 768px) {
+    nav {
+        font-size: 3vw;
+        justify-content: center;
+    }
+
+    .BtnTema {
+        font-size: 3vw;
+        padding: 1vh;
+    }
+
+    h2 {
+        font-size: 6vw;
+    }
+
+    #imgFOTO {
+        width: 50vw;
+    }
+
+    .IMGlink {
+        height: 8vh;
+        width: 8vh;
+    }
+
+    #lgGoogle, #lgGoogle-1 {
+        width: 60vw;
+    }
+}
+
+@media (max-width: 480px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .itemNav {
+        font-size: 5vw;
+        padding: 1vh 4vh;
+    }
+
+    .BtnTema {
+        left: 1vh;
+        font-size: 3.5vw;
+    }
+
+    #imgFOTO {
+        width: 60vw;
+    }
+
+    main h3 {
+        font-size: 1.5rem;
+    }
+
+    .IMGlink {
+        height: 7vh;
+        width: 7vh;
+    }
+
+    #lgGoogle, #lgGoogle-1 {
+        width: 70vw;
+    }
+
+    footer {
+        font-size: 3vw;
+    }
+}   
