--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
-* {
+
+
+
+
+
+
+
+
+
+
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-:root {
-    --salmon: #ff8873;
+:root{
+    --salmon:#ff8873;                
     --black: #000000;
     --white: #ffffff;
-    --blue: #0000ff;
-    --darkblue: #00009e;
+    --blue:#0000ff;
+    --darkblue:#00009e;
 }
-
-.light-theme {
+.light-theme{
     --FontColor: #f8f8f8;
     --bg: #ff8873;
     --BtnFontColor: #000000;
@@ -20,231 +28,182 @@
     --Foot: #000000;
 }
 
-.dark-theme {
+ .dark-theme{
     --FontColor: #000000;
     --bg: #000000;
     --BtnFontColor: #000000;
     --BtnBg: #ff8873;
     --Foot: #ffffff;
-}
+ }
 
-/* ESTILO GERAL */
-body {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+body{
     background-color: var(--bg);
-    font-family: sans-serif;
 }
-
-/* NAV */
-nav {
-    padding: 1% 5%;
-    font-size: 1.7vw;
+nav{
+    padding-block: 1%;
+    padding-inline: 5%;
+    font-size: 170%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     background-color: var(--BtnBg);
-    gap: 1rem;
 }
-
-.itemNav {
+.itemNav{
+    display: flex;
     color: #ffffff;
+    margin-inline: 1%;
+    cursor: copy;
     background-color: #000000;
     border-radius: 20%;
-    padding: 1vh 2vh;
-    text-align: center;
+    padding: 1vh;
+    padding-inline: 2vh;
 }
-
-.itemNav:hover {
+.itemNav:hover{
     background-color: #0000ff;
+    padding: 0.5%;
     border-radius: 30px;
-    transition: 1s;
-    transform: translateX(1vh) rotate(5deg);
+    transform: tranlateX(1vh) rotate(10deg);
+    transition-duration: 1s;
 }
-
-a {
+a{
     color: white;
     text-decoration: none;
 }
 
-.BtnTema {
+
+
+
+
+.BtnTema{
     position: absolute;
     left: 2vh;
     font-size: 70%;
     color: #ffffff;
-    background-color: #000043;
     border-top-right-radius: 40%;
     border-bottom-left-radius: 40%;
+    background-color: #000043;
     cursor: pointer;
     padding: 0.5%;
 }
 
-.BtnTema:hover {
-    transition: 1s;
+.BtnTema:hover{
+    transition-duration: 1s;
     background-color: #0000e4;
 }
-
-/* CONTEÚDO PRINCIPAL */
-#lineT1 {
-    display: block;
-    text-align: center;
+#lineT1{
+    display: inline;
+}
+h2{
+    color: var(--Foot);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 300%;
     margin-top: 4vh;
 }
-
-h2 {
-    color: var(--Foot);
-    font-size: 3vw;
-}
-
-#imgFOTO {
-    margin-top: 2vh;
-    width: 25vw;
-    max-width: 200px;
+#imgFOTO{
+    cursor: crosshair;
     border-radius: 30%;
-    border: 5px solid white;
-    cursor: pointer;
+    border-style: solid;
+    border-width: 20%;
+    color: #ffffff;
 }
-
-/* MAIN LINKS */
-main {
-    margin-top: 5vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2vh;
+img{
+    cursor: cell;
+    position: absolute;
+    right: 10vh;
+    height: 40vh;
+    width: 40vh;
 }
-
-main h3 {
-    width: 100%;
-    text-align: center;
-    font-size: 2rem;
+main{
+    flex-direction:column;
 }
-
-.IMGlink {
+main h3{
+    margin-left: 10vh;
+    font-size: 4vh;
+}
+.IMGlink{
+    cursor: cell;
+    position: absolute;
+    left: 10vh;
     height: 10vh;
     width: 10vh;
-    max-width: 80px;
-    object-fit: contain;
 }
-
-/* LINKS INDIVIDUAIS */
-#L2, #L4, #L6, #L7 {
+#L1{
+    cursor:cell;
+}
+#L2{
     border-radius: 30%;
+    left: 24vh;
 }
-#L3, #L5 {
-    margin-top: 1vh;
+#L3{
+    margin-top: 5%;
 }
-#L6, #L7 {
-    margin-left: 1vh;
+#L4{
+    border-radius: 30%;
+    margin-top: 5%;
+    margin-left: 6.5%;
 }
-
-/* GOOGLE LINKS */
-#GoogleIMGs {
-    position: relative;
-    margin-top: 10vh;
-    text-align: center;
+#L5{
+    margin-top: 10%;
 }
-
-#IMGPrincipal {
-    height: 5vh;
-    width: 5vh;
-    position: relative;
+#L6{
+    border-radius: 25%;
+    margin-top: 10%;
+    margin-left: 6.5%;
 }
-
-#lgGoogle, #lgGoogle-1 {
-    margin: 2vh auto;
-    width: 25vw;
-    max-width: 200px;
-    border-radius: 10%;
+#L7{
+    border-radius: 25%;
+    margin-top: 15%;
+    margin-left: 3%;
 }
 
-#lgGoogle-1 {
-    width: 30vw;
-    max-width: 220px;
+footer{
+    color: var(--FontColor);
+    padding: 1%;
+    position: absolute;
+    bottom: 0;
+    background-color: var(--BtnBg);
+    inline-size: 100%;
 }
-
-/* FOOTER */
-footer {
+footer u button a{
     color: var(--FontColor);
     background-color: var(--BtnBg);
-    padding: 1vh;
-    text-align: center;
-    margin-top: 10vh;
 }
-
-footer button {
-    background: none;
-    border: none;
-    font-size: 1em;
-    cursor: pointer;
+u a{
+    color: #000000;
 }
-
-footer a {
-    color: var(--FontColor);
+#IMGPrincipal{
+    position: absolute;
+    bottom: 10%;
+    height: 7%;
+    width: 6%;
 }
-
-/* MEDIA QUERIES - Responsividade */
-@media (max-width: 768px) {
-    nav {
-        font-size: 3vw;
-        justify-content: center;
-    }
-
-    .BtnTema {
-        font-size: 3vw;
-        padding: 1vh;
-    }
-
-    h2 {
-        font-size: 6vw;
-    }
-
-    #imgFOTO {
-        width: 50vw;
-    }
-
-    .IMGlink {
-        height: 8vh;
-        width: 8vh;
-    }
-
-    #lgGoogle, #lgGoogle-1 {
-        width: 60vw;
-    }
+#lgGoogle{
+    cursor: help;
+    position: absolute;
+    height: 25%;
+    width: 25%;
+    left: 38%;
+    border-radius: 10%;
 }
-
-@media (max-width: 480px) {
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .itemNav {
-        font-size: 5vw;
-        padding: 1vh 4vh;
-    }
-
-    .BtnTema {
-        left: 1vh;
-        font-size: 3.5vw;
-    }
-
-    #imgFOTO {
-        width: 60vw;
-    }
-
-    main h3 {
-        font-size: 1.5rem;
-    }
-
-    .IMGlink {
-        height: 7vh;
-        width: 7vh;
-    }
-
-    #lgGoogle, #lgGoogle-1 {
-        width: 70vw;
-    }
-
-    footer {
-        font-size: 3vw;
-    }
-}   
+#lgGoogle-1{
+    position: absolute;
+    height: 30%;
+    width: 30%;
+    left: 35%;
+    margin-top: 7%;
+}
